Editable (#13)
* Editable

* Fix wrong location calculation

* More precision

* Avoid null point exception by using an absolute path and checking for null

* Avoid integer precision los